welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: ':' expected but ')' found.
	def marqueSol(c) {
                       ^MethodsPicture:37: error: identifier expected but '}' found.
}
^